compiler/tools/fpp-to-dict/test/top/invalidDictDefType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/invalidDictDefType.fpp:2.1
dictionary type A2 = A
^
error: type dictionary defintion must be displayable
